--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,14 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+# Vim temp files
+*~
+*.swp
+*.swo
+
+# Public and private keys
+*.pem
+
+# Ignore sqlite db
+*.db
