--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,31 @@
-alembic==0.9.1
+aniso8601==1.2.0
 appdirs==1.4.2
+-e git+https://github.com/secnot/bitcoin-callback.git@8999814c0878fcd0e511cf40535940bcd3a03bbc#egg=bitcallback
 click==6.7
-depq==1.5.4
-ecdsa==0.13
 Flask==0.12
-Flask-Migrate==2.0.3
-Flask-Script==2.0.5
+flask-restplus==0.10.1
 Flask-SQLAlchemy==2.2
+gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.9.5
-Mako==1.0.6
+jsonschema==2.6.0
+linecache2==1.0.0
 MarkupSafe==1.0
-namedlist==1.7
+multiprocessing-logging==0.2.4
+nose==1.3.7
 packaging==16.8
 pkg-resources==0.0.0
-pyparsing==2.1.10
+pyparsing==2.2.0
 python-bitcoinlib===0.7.1-SNAPSHOT
+python-dateutil==2.6.0
 python-editor==1.0.3
+python-swagger-ui==0.1
+pytz==2017.2
+PyYAML==3.12
 requests==2.13.0
 six==1.10.0
 SQLAlchemy==1.1.6
+tornado==4.5.1
+traceback2==1.4.0
+unittest2==1.1.0
 Werkzeug==0.12.1
